2010-05-12  JMB  Tweaked calculator & date dialogs, package descriptions

    Moved the calculator dialog's "OK" button to the right place on Fremantle.
    Don't maximize the calendar dialog on Diablo; it seems to force several
    slow resizings, and still doesn't come out quite right.  Updated the
    bulleted lists in the Diablo and Maemo package descriptions to use current
    Debian conventions, which should improve the text formatting on the Maemo
    package web page.

2010-05-11  JMB  Assorted bugfixes, formatting code cleanup, better Mac dmg

    Fixed a bug in opening PortaBase files from the command line.  That bug
    also broke opening files with a double-click on Windows and Linux, so that
    should work again.

    The recently used files list now ensures that the last opened file is at
    the top of the list, not just in it.  Also made sure that files opened from
    the command line or drag & drop get included in the list.
    
    Made the height of string input fields more consistent.  Moved more data
    field formatting and parsing code to the new Formatting class.  Made some
    minor enhancements to the Mac installer disk image build script.

2010-05-10  JMB  Number formatting improvements, usability tweaks, Czech update

    Overhauled the formatting and parsing of decimal values so that they should
    look correct in most locales, without actually changing what's stored in
    the file (internally, US English number formatting is always used).  This
    had some side benefits, like being able to enter percentages and have them
    used correctly in calculations.  CSV import/export still assumes US English
    formatting, I'll try to fix that as part of a larger CSV import overhaul in
    version 2.1.
    
    Changed the date dialog so that clicking "Today" or clicking (or selecting
    with the "Enter" or "Return" keys) a day will immediately select the date
    and close the dialog.  Changed the default decimal default value in the